--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ coreschema==0.0.4
 cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.1
+django-debug-toolbar==3.6.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
