--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,22 @@
 server {
+    server_tokens off;
     listen 80;
+    server_name localhost;
+    location /static/admin/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
     }
     location / {
         root /usr/share/nginx/html;
@@ -17,5 +31,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
