--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -10,6 +10,8 @@ server {
     }
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -17,6 +19,8 @@ server {
     }
     location /api/ {
         proxy_pass http://backend:8000/api/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
     location / {
         root /usr/share/nginx/html;
@@ -27,8 +31,8 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
+    error_page   500 502 503 504  /50x.html;
+    location /50x.html {
         root   /var/html/frontend/;
       }
 }
