--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     env_file:
       - ../.env
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: plonkton/foodgram_backend:v1
     restart: always
     command:
       sh -c 'python3 manage.py migrate &&
@@ -43,6 +41,7 @@ services:
     depends_on:
       - backend
 volumes:
+  frontend_data:
   static_value:
   media_value:
   db_data:
