--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -19,7 +19,9 @@ jobs:
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
           pip install -r requirements.txt
       - name: flake8 tests
-        run: python3 -m flake8
+        run: |
+          cd backend/
+          python3 -m flake8
   build_and_push_to_dockerhub:
     runs-on: ubuntu-latest
     needs: tests
