--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           cd backend/
           python3 -m pip install --upgrade pip
-          pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+          pip install flake8 pep8-naming flake8-broken-line flake8-return
           pip install -r requirements.txt
       - name: flake8 tests
         run: |
