ready for deploy v 1.1

--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -54,7 +54,7 @@ jobs:
           passphrase: ${{secrets.SERVER_PASSPHRASE}}
           script: |
             sudo docker pull plonkton/foodgram_backend:v1
-            cd infra/
+            cd foodgram-project-react/infra/
             sudo docker-compose stop
             sudo docker-compose rm -f backend
             touch ../.env
