--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.6'
 services:
   db:
     image: postgres:13.0-alpine
@@ -41,7 +42,6 @@ services:
     depends_on:
       - backend
 volumes:
-  frontend_data:
   static_value:
   media_value:
   db_data:
