--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     command:
       sh -c 'python3 manage.py migrate &&
       python3 manage.py collectstatic --no-input &&
+      python3 manage.py load_ingredients_data &&
       gunicorn foodgram.wsgi:application --bind 0:8000'
     volumes:
       - static_value:/app/static/
