--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -41,6 +41,12 @@ jobs:
           context: ./backend
           push: true
           tags: plonkton/foodgram_backend:v1
+      - name: Push frontend to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
+          push: true
+          tags: plonkton/foodgram_frontend:v1
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_dockerhub
@@ -54,9 +60,10 @@ jobs:
           passphrase: ${{secrets.SERVER_PASSPHRASE}}
           script: |
             sudo docker pull plonkton/foodgram_backend:v1
+            sudo docker pull plonkton/foodgram_frontend:v1
             cd foodgram-project-react/infra/
             sudo docker-compose stop
-            sudo docker-compose rm -f backend
+            sudo docker-compose rm -f backend frontend
             touch ../.env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> ../.env
             echo DB_NAME=${{ secrets.DB_NAME }} >> ../.env
@@ -64,4 +71,4 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> ../.env
             echo DB_HOST=${{ secrets.DB_HOST }} >> ../.env
             echo DB_PORT=${{ secrets.DB_PORT }} >> ../.env
-            sudo docker-compose up --build -d
+            sudo docker-compose up -d
