--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,9 +21,7 @@ services:
     env_file:
       - ../.env
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: plonkton/foodgram_frontend:v1
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -40,7 +38,7 @@ services:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
-      - backend
+      - frontend
 volumes:
   static_value:
   media_value:
